--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                     </div>
                                     <div>
                                         <h4 class="text-gray-600">
-                                            Alat Skoring
+                                            Skoring
                                         </h4>
                                     </div>
                                 </div>
