--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <i class="fas fa-user-friends text-xl"></i>
                     </div>
                     <h3 class="text-3xl mb-2 font-semibold leading-normal">
-                        Berkompetisi Sambil Mengahasilkan
+                        Berkompetisi Sambil Menghasilkan
                     </h3>
                     <p
                             class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700"
