update meta data

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
     />
-    <meta property="og:title" content=Tumwuh | Dapatkan Uang Dengan Berkompetisi>
-    <meta property="og:site_name" content=Tumwuh>
-    <meta property="og:url" content=tumwuh.com>
-    <meta property="og:description" content=Persiapkan Tim Mu Untuk Berkompetisi Bentuk tim terkuatmu untuk memenangkan
-          kompetisi dalam bidang olahraga dan olahraga elektronik dan dapatkan hadiah dari kemenangan mu>
+    <meta property="og:title" content="Tumwuh | Dapatkan Uang Dengan Berkompetisi">
+    <meta property="og:site_name" content="Tumwuh">
+    <meta property="og:url" content="tumwuh.com">
+    <meta property="og:description" content="Persiapkan Tim Mu Untuk Berkompetisi Bentuk tim terkuatmu untuk memenangkan
+          kompetisi dalam bidang olahraga dan olahraga elektronik dan dapatkan hadiah dari kemenangan mu">
     <meta property="og:type" content=product.item>
     <meta property="og:image" content=https://tumwuh.com/assets/img/logo.png>
-    <meta property="description" content=Persiapkan Tim Mu Untuk Berkompetisi Bentuk tim terkuatmu untuk memenangkan
-          kompetisi dalam bidang olahraga dan olahraga elektronik dan dapatkan hadiah dari kemenangan mu>
-    <meta property="og:image" content=https://tumwuh.com/assets/img/logo.png>
+    <meta property="description" content="Persiapkan Tim Mu Untuk Berkompetisi Bentuk tim terkuatmu untuk memenangkan
+          kompetisi dalam bidang olahraga dan olahraga elektronik dan dapatkan hadiah dari kemenangan mu">
+    <meta property="og:image" content="https://tumwuh.com/assets/img/logo.png">
     <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
