--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
     <link
             rel="apple-touch-icon"
             sizes="76x76"
@@ -17,32 +16,25 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
     />
-    <meta property="og:title" content="Tumwuh | Dapatkan Uang Dengan Berkompetisi">
-    <meta property="og:site_name" content="Tumwuh">
-    <meta property="og:url" content="tumwuh.com">
-    <meta property="og:description" content="Persiapkan Tim Mu Untuk Berkompetisi Bentuk tim terkuatmu untuk memenangkan
-          kompetisi dalam bidang olahraga dan olahraga elektronik dan dapatkan hadiah dari kemenangan mu">
-    <meta property="og:type" content=product.item>
-    <meta property="og:image" content=https://tumwuh.com/assets/img/logo.png>
-    <meta property="description" content="Persiapkan Tim Mu Untuk Berkompetisi Bentuk tim terkuatmu untuk memenangkan
-          kompetisi dalam bidang olahraga dan olahraga elektronik dan dapatkan hadiah dari kemenangan mu">
-    <meta property="og:image" content="https://tumwuh.com/assets/img/logo.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+<meta name="Content-Type" content="text/html; charset=utf-8">
+<meta name="description" content="Tumwuh adalah online tournament platform tempat mu berkompetisi dan meraih pencapaian dalam hidupmu">
+<meta name="og:description" content="Tumwuh adalah online tournament platform tempat mu berkompetisi dan meraih pencapaian dalam hidupmu">
+<meta name="keywords" content="kompetisi olahraga, lomba, esport, turnament">
+<meta name="og:title" content="Tumwuh | Sport Tournament">
+<meta name="og:url" content="https://tumwuh.com">
+<meta name="og:site_name" content="Tumwuh">
+<meta name="og:type" content="business.business">
+<meta name="og:image" content="https://tumwuh.twic.pics/public/android-chrome-192x192.png">
+<meta name="twitter:title" content="Tumwuh | Sport Tournament">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://tumwuh.com">
+<meta name="twitter:image" content="https://tumwuh.twic.pics/public/android-chrome-192x192.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+<link rel="favicon" type="image/x-icon" href="https://tumwuh.twic.pics/favicon.ico">
+<link rel="apple-touch-icon" href="https://tumwuh.twic.pics/apple-touch-icon.png" sizes="180x180">
+<link rel="icon" href="https://tumwuh.twic.pics/public/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="https://tumwuh.twic.pics/public/favicon-16x16.png" sizes="16x16" type="image/png">
     <title>Tumwuh | Dapatkan Uang Dengan Berkompetisi </title>
 </head>
 <body class="text-gray-800 antialiased">
